--- a/application/team4-development/views/Contact.html
+++ b/application/team4-development/views/Contact.html
@@ -232,8 +232,10 @@
         </div>
       </div>
     </div>
-    <div id="googlemap"></div>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCkUOdZ5y7hMm0yrcCQoCvLwzdM6M8s5qk&callback=initMap" async defer></script>
+    
+    <!-- Map integration -->
+    <div id="map"></div>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCkUOdZ5y7hMm0yrcCQoCvLwzdM6M8s5qk&callback=initMap" async defer></script>
 
 
     <!-- End header MEnu Area -->
