--- a/application/team4-development/views/Contact.html
+++ b/application/team4-development/views/Contact.html
@@ -28,7 +28,7 @@
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/responsive.css">
   <link rel="stylesheet" href="css/pagination.css">
-  <link rel="stylesheet" href="css/googlemap.css">
+  <link rel="stylesheet" href="css/map.css">
   <!-- js -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
@@ -36,7 +36,7 @@
   <script src="https://github.com/yckart/jquery.storage.js"></script>
   <script type="text/javascript" src="js/sessionStorage.js"></script>
   <script type="text/javascript" src="js/filterOption.js"></script>
-  <script type="text/javascript" src="js/googlemap.js"></script>
+  <script type="text/javascript" src="js/map.js"></script>
   <script type="text/javascript" src="js/pagination.js"></script>
   <script src="http://www.jq22.com/jquery/jquery-1.10.2.js"></script>
 
@@ -232,7 +232,7 @@
         </div>
       </div>
     </div>
-    
+
     <!-- Map integration -->
     <div id="map"></div>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCkUOdZ5y7hMm0yrcCQoCvLwzdM6M8s5qk&callback=initMap" async defer></script>
