Home.hbs changed to'/' and comments modified to finalize everything.

--- a/application/team4-development/views/Home.hbs
+++ b/application/team4-development/views/Home.hbs
@@ -1,5 +1,5 @@
 
-<!-- Write your comments here  Contact.html
+<!--Home.hbs
 //  CSC648-su19-Team04
 //  The Better City
 //  Created by Ryan on 7/28/19.
