--- a/application/team4-development/views/Header.html
+++ b/application/team4-development/views/Header.html
@@ -1,5 +1,5 @@
 
-<!-- Write your comments here  Contact.html
+<!--Contact.html
 //  CSC648-su19-Team04
 //  The Better City
 //  Created by Maithri on 7/28/19.
