--- a/application/team4-development/views/Test.hbs
+++ b/application/team4-development/views/Test.hbs
@@ -1,5 +1,5 @@
 
-<!-- Write your comments here  Contact.html
+<!--Test.hbs
 //  CSC648-su19-Team04
 //  The Better City
 //  Created by Soham on 7/28/19.
